@@ -6,6 +6,7 @@
  - updates for XOOPS 2.5.11 Stable (goffy)
  - added email validation (goffy)
  - added check for pending tasks (goffy)
+ - added statistics for tasks (goffy)
 
 ==============================================================
 1.0.6 Stable [2023/03/09]
